SOAP and tests